<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardgray">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="118dp"
        android:fontFamily="@font/poppins"
        android:text="@string/postopic"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defMargin"
            android:layout_marginEnd="@dimen/defMargin"
            android:layout_marginBottom="@dimen/defPadding"
            app:cardCornerRadius="@dimen/defRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/postname"
                    android:inputType="text"
                    android:text=""
                    android:textAlignment="viewStart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defMargin"
            android:layout_marginEnd="@dimen/defMargin"
            android:layout_marginBottom="@dimen/defPadding"
            app:cardCornerRadius="@dimen/defRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/posttime"
                    android:inputType="text"
                    android:text=""
                    android:textAlignment="viewStart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defMargin"
            android:layout_marginEnd="@dimen/defMargin"
            android:layout_marginBottom="@dimen/defPadding"
            app:cardCornerRadius="@dimen/defRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/postype"
                    android:inputType="text"
                    android:textAlignment="viewStart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defMargin"
            android:layout_marginEnd="@dimen/defMargin"
            android:layout_marginBottom="@dimen/defPadding"
            app:cardCornerRadius="@dimen/defRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="8"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/postcountry"
                    android:inputType="text"
                    android:textAlignment="viewStart" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defMargin"
            android:layout_marginEnd="@dimen/defMargin"
            android:layout_marginBottom="@dimen/defPadding"
            app:cardCornerRadius="@dimen/defRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/postingredeients"
                    android:inputType="text"
                    android:textAlignment="viewStart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defMargin"
            android:layout_marginEnd="@dimen/defMargin"
            android:layout_marginBottom="@dimen/defPadding"
            app:cardCornerRadius="@dimen/defRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/postinstructions"
                    android:inputType="text"
                    android:textAlignment="viewStart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defMargin"
            android:layout_marginEnd="@dimen/defMargin"
            android:layout_marginBottom="@dimen/defPadding"
            app:cardCornerRadius="@dimen/defRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/postimage"
                    android:inputType="text"
                    android:textAlignment="viewStart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="131dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/white"
        app:elevation="0dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/postdescrip"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>